<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.registration.ui.RegisterFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/label_email"
        android:layout_above="@id/layoutPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/design_default_color_primary_dark"
            android:textColorHint="@color/design_default_color_primary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_above="@id/layoutConfirmPassword"
        android:layout_marginBottom="16dp"
        android:hint="@string/label_password"
        android:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/design_default_color_primary_dark"
            android:textColorHint="@color/design_default_color_primary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/label_confirm_password"
        android:layout_above="@id/btnOpenPrivacy">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/design_default_color_primary_dark"
            android:textColorHint="@color/design_default_color_primary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkboxPrivacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnRegister"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/label_accept"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOpenPrivacy"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnRegister"
        android:layout_marginBottom="32dp"
        android:layout_toEndOf="@id/checkboxPrivacy"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="0.0001"
        android:padding="0dp"
        android:layout_marginStart="1dp"
        android:text="@string/label_terms_of_user"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:visibility="visible"
        app:strokeColor="@android:color/transparent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_above="@id/btnOpenLogin"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/design_default_color_primary"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/label_register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="visible"
        app:cornerRadius="5dp"
        app:strokeColor="@android:color/transparent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOpenLogin"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_above="@id/btnOpenLogin"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/white"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/label_sign_in"
        android:textAllCaps="false"
        android:textColor="@color/design_default_color_primary"
        android:visibility="visible"
        app:cornerRadius="5dp"
        app:strokeColor="@android:color/transparent" />

</RelativeLayout>